Refactor for --key-file= option

--- a/vm/etc/split-dm-crypt.conf
+++ b/vm/etc/split-dm-crypt.conf
@@ -1,5 +1,6 @@
 DEVICE=/dev/xvds
 MAP_NAME=split-dm-crypt
-HEADER_FILE=/run/split-dm-crypt/header+
-LUKS1_MAX_HEADER_BYTES=2068480
+TEMP_DIR=/run/split-dm-crypt
+HEADER_FILE=$TEMP_DIR/header+
+LUKS1_MAX_HEADER_BYTES=$(( 4040 * 512 ))
 LUKS1_FORMAT_OPTIONS="--key-size=512 --hash=sha512 --iter-time=5000"
