--- a/vm/etc/split-dm-crypt.conf
+++ b/vm/etc/split-dm-crypt.conf
@@ -1,6 +1,8 @@
 DEVICE=/dev/xvds
 MAP_NAME=split-dm-crypt
 TEMP_DIR=/run/split-dm-crypt
+KEY_FILE=$TEMP_DIR/keyfile
 HEADER_FILE=$TEMP_DIR/header+
+MAX_KEY_FILE_BYTES=$(( 8 * 1024**2 ))
 LUKS1_MAX_HEADER_BYTES=$(( 4040 * 512 ))
 LUKS1_FORMAT_OPTIONS="--key-size=512 --hash=sha512 --iter-time=5000"
