Temporarily work around QSB #38 breakage
https://github.com/QubesOS/qubes-issues/issues/3615

--- a/vm/etc/split-dm-crypt.conf
+++ b/vm/etc/split-dm-crypt.conf
@@ -1,3 +1,5 @@
+export PATH=/sbin:/usr/sbin:/usr/local/sbin:"${PATH:-/bin:/usr/bin:/usr/local/bin}"
+
 DEVICE=/dev/xvds
 MAP_NAME=split-dm-crypt
 TEMP_DIR=/run/split-dm-crypt
