Throw a bunch of code over the wall
- Support LUKS2 and make it the default
- Support 4K dm-crypt sectors
- Support the Adiantum wide-block cipher
- Just use /dev/random (instead of /dev/urandom after waiting for entropy)
- Use 'dd status=progress' instead of pv

--- a/vm/etc/split-dm-crypt.conf
+++ b/vm/etc/split-dm-crypt.conf
@@ -4,5 +4,15 @@ TEMP_DIR=/run/split-dm-crypt
 KEY_FILE=$TEMP_DIR/keyfile
 HEADER_FILE=$TEMP_DIR/header+
 MAX_KEY_FILE_BYTES=$(( 8 * 1024**2 ))
-LUKS1_MAX_HEADER_BYTES=$(( 4040 * 512 ))
-LUKS1_FORMAT_OPTIONS="--key-size=512 --hash=sha512 --iter-time=5000"
+declare -A DATA_OFFSET_512B=(
+    [luks1]=4096
+    [luks2]=32768
+)
+declare -A MAX_HEADER_BYTES=(
+    [luks1]=$(( 4040 * 512 ))
+    [luks2]=$(( DATA_OFFSET_512B[luks2] * 512 ))
+)
+declare -A FORMAT_OPTIONS=(
+    [luks1]="--key-size=512 --hash=sha512 --iter-time=5000"
+    [luks2]=""
+)
