Revert to previous approach for overwrite-everything-with-random
/dev/random is pretty fast nowadays, but copying from /dev/zero to a
dm-crypt device with a random key is still about twice as fast on my
system.

--- a/vm/etc/split-dm-crypt.conf
+++ b/vm/etc/split-dm-crypt.conf
@@ -5,6 +5,7 @@ KEY_FILE=$TEMP_DIR/keyfile
 HEADER_FILE=$TEMP_DIR/header+
 MAX_KEY_FILE_BYTES=$(( 8 * 1024**2 ))
 declare -A DATA_OFFSET_512B=(
+    [nohdr]=0
     [luks1]=4096
     [luks2]=32768
 )
